# HealthSyncIQ

./: .gitignore  alembic.ini  docker-compose.yml  dockerfile  makefile  pyproject.toml
.github/workflows/: lint.yml
scripts/: start.sh
src/: main.py
src/database/: __init__.py  setup.py
src/database/migrations/: env.py  script.py.mako
src/database/migrations/versions/: 095d8ee9ccf3_create_clinical_order_results_table.py  28a51e403e18_create_staff_table.py  306c966ede1c_create_department_membership_table.py  (+11 more)
src/settings/: __init__.py  config.py  time.py
src/v1/controllers/: __init__.py  app.py  auth.py  department.py  staff.py
src/v1/docs/: __init__.py  response_metadata.py
src/v1/errors/: __init__.py  exception.py  exception_handler.py
src/v1/middlewares/: __init__.py  auth.py
src/v1/models/: __init__.py  clinical_encounter.py  clinical_note.py  clinical_order.py  clinical_order_result.py  department.py  department_membership.py  diagnosis.py  file_attachment.py  medication_dispensing.py  nursing_task.py  patient.py  staff.py
src/v1/routes/: __init__.py  app.py  auth.py  department.py  staff.py
src/v1/schemas/: __init__.py  auth.py  clinical_encounter.py  clinical_note.py  clinical_order.py  clinical_order_result.py  department.py  department_membership.py  diagnosis.py  file_attachment.py  medication_dispensing.py  nursing_task.py  patient.py  staff.py
src/v1/services/: __init__.py  app.py  auth.py  department.py  staff.py
src/v1/type_defs/: __init__.py  auth.py  jwt.py  kwargs.py  response.py  status_code.py
(+2 files in other folders)
